vm stats chart display

--- a/reports/templates/reports_group.html
+++ b/reports/templates/reports_group.html
@@ -56,7 +56,7 @@
 {% endblock %}
 
 {% block script %}
-    <script type="text/javascript" src="{% static 'chartjs/Chart-2.9.3.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'chartjs/chart-3.4.1.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'art-template/template-web.js' %}"></script>
     <script type="text/javascript" src="{% static 'evcloud/common.js' %}"></script>
     <script type="text/javascript" src="{% static 'reports/reports_common.js' %}"></script>
