--- a/vms/templates/vms_list.html
+++ b/vms/templates/vms_list.html
@@ -121,7 +121,7 @@
                                 </span>
                             </div>
                         </td>
-                        <td><span id="vm_status_{{ vm.hex_uuid }}">fa fa-spinner fa-pulse</span></td>
+                        <td><span id="vm_status_{{ vm.hex_uuid }}"></span></td>
                         <td><span id="vm_task_{{ vm.hex_uuid }}"></span></td>
 
                         <td>
