--- a/vms/templates/vm_operations.html
+++ b/vms/templates/vm_operations.html
@@ -15,11 +15,19 @@
         <a class="dropdown-item bg-info" href="{% url 'vms:vm-mount-pci' vm_uuid=vm.hex_uuid %}">挂载PCI设备</a>
         <a class="dropdown-item bg-info" href="{% url 'vms:vm-edit' vm_uuid=vm.hex_uuid %}">修改配置</a>
         <a class="dropdown-item bg-info" href="{% url 'vms:vm-reset' vm_uuid=vm.hex_uuid %}">重置镜像</a>
+        {% if vm.is_sys_disk_local %}
+            <button class="dropdown-item bg-info disabled">关机迁移</button>
+            <button class="dropdown-item bg-info disabled">动态迁移</button>
+            <button class="dropdown-item bg-info disabled">创建快照</button>
+            <button class="dropdown-item bg-warning disabled">丢失恢复</button>
+            <button class="dropdown-item bg-info disabled">系统盘扩容</button>
+        {% else %}
         <a class="dropdown-item bg-info" href="{% url 'vms:vm-migrate' vm_uuid=vm.hex_uuid %}">关机迁移</a>
         <a class="dropdown-item bg-info" href="{% url 'vms:vm-live-migrate' vm_uuid=vm.hex_uuid %}">动态迁移</a>
         <button class="dropdown-item bg-info btn-vm-snap-create" type="button" data-vm-uuid="{{ vm.hex_uuid }}">创建快照</button>
         <button class="dropdown-item bg-warning btn-vm-miss-fix" type="button" data-vm-uuid="{{ vm.hex_uuid }}">丢失恢复</button>
         <a class="dropdown-item bg-info" href="{% url 'vms:vm-sys-disk-expand' vm_uuid=vm.hex_uuid %}">系统盘扩容</a>
+        {% endif %}
     </div>
 </div>
 
