--- a/users/templates/form.html
+++ b/users/templates/form.html
@@ -4,7 +4,7 @@
 
 {% block boby %}
     <div class="container">
-        <div class="d-flex align-items-center justify-content-center" style="height: 80vh;">
+        <div class="d-flex align-items-center justify-content-center">
             <div class="col-sm-8 col-md-7 col-lg-5">
                 {% if tips_msg %}
                     <div>
