移除model ImageType,ListImages响应数据增加镜像大小size，资源配额视图饼形图改为已用和可用

--- a/reports/templates/quota.html
+++ b/reports/templates/quota.html
@@ -48,11 +48,11 @@
                         }
                     },
                     data: {
-                        labels: ['已用', '总量'],
+                        labels: ['已用', '可用'],
                         datasets: [{
                             label: '已用',
                             backgroundColor: [window.chartColors.grey, window.chartColors.green],
-                            data: [data.used, data.total]
+                            data: [data.used, data.total - data.used]
                         }]
                     }
                 }
