--- a/reports/templates/reports_list.html
+++ b/reports/templates/reports_list.html
@@ -36,8 +36,8 @@
                         <td>{{c.vcpu_total}}</td>
                         <td>{{c.vcpu_allocated}}</td>
                         <td>{{c.vcpu_allocated | percentageformat:c.vcpu_total}}</td>
-                        <td>{{c.mem_total | sizeformat:'MB'}}</td>
-                        <td>{{c.mem_allocated | sizeformat:'MB'}}</td>
+                        <td>{{c.mem_total | sizeformat:'GB'}}</td>
+                        <td>{{c.mem_allocated | sizeformat:'GB'}}</td>
                         <td>{{c.mem_allocated | percentageformat:c.mem_total}}</td>
                         <td>{{c.vm_created}}</td>
                     </tr>
@@ -73,8 +73,8 @@
                         <td>{{c.vcpu_total}}</td>
                         <td>{{c.vcpu_allocated}}</td>
                         <td>{{c.vcpu_allocated | percentageformat:c.vcpu_total}}</td>
-                        <td>{{c.mem_total | sizeformat:'MB'}}</td>
-                        <td>{{c.mem_allocated | sizeformat:'MB'}}</td>
+                        <td>{{c.mem_total | sizeformat:'GB'}}</td>
+                        <td>{{c.mem_allocated | sizeformat:'GB'}}</td>
                         <td>{{c.mem_allocated | percentageformat:c.mem_total}}</td>
                         <td>{{c.vm_created}}</td>
                     </tr>
@@ -110,8 +110,8 @@
                         <td>{{c.vcpu_total}}</td>
                         <td>{{c.vcpu_allocated}}</td>
                         <td>{{c.vcpu_allocated | percentageformat:c.vcpu_total}}</td>
-                        <td>{{c.mem_total | sizeformat:'MB'}}</td>
-                        <td>{{c.mem_allocated | sizeformat:'MB'}}</td>
+                        <td>{{c.mem_total | sizeformat:'GB'}}</td>
+                        <td>{{c.mem_allocated | sizeformat:'GB'}}</td>
                         <td>{{c.mem_allocated | percentageformat:c.mem_total}}</td>
                         <td>{{c.vm_created}}</td>
                     </tr>
