--- a/vms/templates/vm_edit.html
+++ b/vms/templates/vm_edit.html
@@ -23,7 +23,7 @@
                         <dt class="col-2 text-right">分中心:</dt> <dd class="col-10">{{ vm.host.group.center }}</dd>
                         <dt class="col-2 text-right">机组:</dt> <dd class="col-10">{{ vm.host.group }}</dd>
                         <dt class="col-2 text-right">CPU:</dt> <dd class="col-10">{{ vm.vcpu }}</dd>
-                        <dt class="col-2 text-right">MEM:</dt> <dd class="col-10">{{ vm.mem }}MB</dd>
+                        <dt class="col-2 text-right">MEM:</dt> <dd class="col-10">{{ vm.mem }}GB</dd>
                         <dt class="col-2 text-right">备注:</dt> <dd class="col-10">{{ vm.remarks }}</dd>
                     </dl>
                 </div>
@@ -41,7 +41,7 @@
                                         <select name="flavor_id" class="form-control" id="id-flavor">
                                             <option value="" data-vcpu="" data-ram="">自定义</option>
                                             {% for f in flavors %}
-                                                <option value="{{ f.id }}" data-vcpu="{{ f.vcpus }}" data-ram="{{ f.ram }}">CPU: {{ f.vcpus }}核 / RAM: {{ f.ram }}MB</option>
+                                                <option value="{{ f.id }}" data-vcpu="{{ f.vcpus }}" data-ram="{{ f.ram }}">CPU: {{ f.vcpus }}核 / RAM: {{ f.ram }}GB</option>
                                             {% endfor %}
                                         </select>
                                     </div>
@@ -61,7 +61,7 @@
                                             </div>
                                             <input name="mem" type="text" class="form-control" placeholder="可以为空，不修改" onkeyup="value=value.replace(/^(0+)|[^\d]+/g,'')" aria-label="RAM">
                                             <div class="input-group-append">
-                                                <span class="input-group-text">MB</span>
+                                                <span class="input-group-text">GB</span>
                                             </div>
                                         </div>
                                     </div>
@@ -74,6 +74,7 @@
                             <button type="submit" class="btn btn-primary float-right">修改</button>
                         </div>
                     </div>
+                    <input name="mem_unit" type="hidden" id="mem_unit" value="GB">
                 </form>
             </div>
         </div>
