--- a/vms/templates/vm_detail.html
+++ b/vms/templates/vm_detail.html
@@ -71,7 +71,7 @@
                                 <div class="col-md-10">
                                     <div class="row">
                                         <div class="col-md-4"><strong>CPU：</strong>{{ vm.vcpu }}</div>
-                                        <div class="col-md-4"><strong>MEMORY：</strong>{{ vm.mem|sizeformat:'MB' }}</div>
+                                        <div class="col-md-4"><strong>MEMORY：</strong>{{ vm.mem|sizeformat:'GB' }}</div>
                                         <div class="col-md-4"><strong>SYS DISK：</strong>{{ vm.sys_disk_size|sizeformat:'GB' }}</div>
                                     </div>
                                 </div>
