--- a/vms/templates/vm_reset.html
+++ b/vms/templates/vm_reset.html
@@ -22,7 +22,7 @@
                             <dt class="col-2 text-right">云主机UUID:</dt> <dd class="col-10" id="id-vm-uuid">{{ vm.hex_uuid }}</dd>
                             <dt class="col-2 text-right">云主机IP:</dt> <dd class="col-10">{{ vm.ipv4 }}</dd>
                             <dt class="col-2 text-right">CPU数:</dt> <dd class="col-10">{{ vm.vcpu }}</dd>
-                            <dt class="col-2 text-right">内存:</dt> <dd class="col-10">{{ vm.mem }} MB</dd>
+                            <dt class="col-2 text-right">内存:</dt> <dd class="col-10">{{ vm.mem }} GB</dd>
                             <dt class="col-2 text-right">镜像:</dt> <dd class="col-10">{{ vm.image }}</dd>
                             <dt class="col-2 text-right">机组:</dt> <dd class="col-10">{{ vm.host.group }}</dd>
                             <dt class="col-2 text-right">宿主机:</dt> <dd class="col-10">{{ vm.host.ipv4 }}</dd>
