“关于”网页修改，增加当前版本时间和变更日志链接；增加v3.1.9版本信息

--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,14 @@
                 </div>
                 <div class="p-2">
                     <h5>{% trans '版本' %}</h5>
-                    <p>{{ version }}</p>
+                    <p><span>{{ version }}</span>&emsp;
+                        {% if version_timestamp %}
+                            <span>{{ version_timestamp }}</span>&emsp;
+                        {% endif %}
+                        <span><a href="{% url 'docs:docs' %}#/changelog" target="view_window">
+                            {% trans '变更日志' %}</a>
+                        </span>
+                    </p>
                 </div>
                 <div class="p-2">
                     <h5>{% trans '关于我们' %}</h5>
