--- a/image/templates/image_list.html
+++ b/image/templates/image_list.html
@@ -12,6 +12,9 @@
         <div class="card">
             <div class="card-header">
                 <span class="card-title"><strong>镜像列表 ({{ count }})</strong></span>
+                <span>
+                    <a class="btn btn-sm btn-primary float-right" href="{% url 'image:image-add' %}">新增镜像</a>
+                </span>
             </div>
             <div class="card-body">
                 <form role="form" class="form-horizontal" method="get" action="">
@@ -28,12 +31,13 @@
                             {% endfor %}
                         </select>
                         <div class="input-group-prepend">
-                            <label class="input-group-text"  for="id-tag">标签</label>
+                            <label class="input-group-text" for="id-tag">标签</label>
                         </div>
                         <select name="tag" class="custom-select" id="id-tag">
                             <option value="">--</option>
                             {% for val, name in tags %}
-                                <option value="{{ val }}" {% if val == tag_value %}selected {% endif %}>{{ name }}</option>
+                                <option value="{{ val }}"
+                                        {% if val == tag_value %}selected {% endif %}>{{ name }}</option>
                             {% endfor %}
                         </select>
                         <div class="input-group-prepend">
@@ -42,7 +46,8 @@
                         <select name="sys_type" class="custom-select" id="id-sys-type">
                             <option value="">--</option>
                             {% for val, name in sys_types %}
-                                <option value="{{ val }}" {% if val == sys_type_value %}selected {% endif %}>{{ name }}</option>
+                                <option value="{{ val }}"
+                                        {% if val == sys_type_value %}selected {% endif %}>{{ name }}</option>
                             {% endfor %}
                         </select>
                         <div class="input-group-prepend">
@@ -63,12 +68,19 @@
                     <th>镜像标签</th>
                     <th>创建时间</th>
                     <th>备注</th>
+                    <th>状态
+                        <button class="btn btn-sm btn-outline-success btn-update-vm-status"><i class="fa fa-sync"></i>
+                        </button>
+                    </th>
+                    <th>操作</th>
                 </tr>
                 </thead>
                 <tbody>
                 {% for image in images %}
                     <tr id="tr_{{ image.id }}">
-                        <td title="{{ image.id }}"><a href="#"><b>{{ image.name }}</b></a></td>
+                        <input type="hidden" class="item-checkbox" value="{{ image.id }}" name="select_vm">
+                        <td title="{{ image.id }}"><a
+                                href="{% url 'image:image-change' id=image.id %}"><b>{{ image.name }}</b></a></td>
                         <td>{{ image.version }}</td>
                         <td>{{ image.sys_type_display }}</td>
                         <td>{{ image.tag_display }}</td>
@@ -76,7 +88,8 @@
                         <td class="mouse-hover" style="max-width: 200px;">
                             <div>
                                 <span>{{ image.desc|default_if_none:'' }}</span>
-                                <span class="mouse-hover-show edit_vm_remark" data-image-id="{{ image.id }}" style="display:none;" title="修改备注">
+                                <span class="mouse-hover-show edit_vm_remark" data-image-id="{{ image.id }}"
+                                      style="display:none;" title="修改备注">
                                     <span class="glyphicon glyphicon-pencil"></span>
                                 </span>
                             </div>
@@ -87,6 +100,58 @@
                                 </span>
                             </div>
                         </td>
+                        <td><span id="vm_status_{{ image.id }}"></span></td>
+                        <td>
+                            {% if image.vm_uuid %}
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-sm btn-info btn-vnc-open"
+                                            data-image-id="{{ image.id }}">
+                                        <i class="fa fa-desktop"></i></button>
+                                    <button type="button" class="btn btn-sm btn-success dropdown-toggle"
+                                            id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                                            aria-expanded="false">操作
+                                    </button>
+                                    <div class="dropdown-menu text-center" aria-labelledby="dropdownMenuButton">
+                                        <button class="dropdown-item bg-success btn-vm-start" type="button"
+                                                data-image-id="{{ image.id }}">开机
+                                        </button>
+                                        <button class="dropdown-item bg-warning btn-vm-shutdown" type="button"
+                                                data-image-id="{{ image.id }}">关机
+                                        </button>
+                                        <button class="dropdown-item bg-warning btn-vm-reboot" type="button"
+                                                data-image-id="{{ image.id }}">软重启
+                                        </button>
+                                        <button class="dropdown-item bg-warning btn-vm-poweroff" type="button"
+                                                data-image-id="{{ image.id }}">强制断电
+                                        </button>
+                                        <button class="dropdown-item bg-warning btn-image-update" type="button"
+                                                data-image-id="{{ image.id }}">更新镜像快照
+                                        </button>
+                                        <a class="dropdown-item bg-danger btn-vm-delete"
+                                           href="{% url 'image:image-delete' id=image.id %}">删除镜像</a>
+                                    </div>
+                                </div>
+                            {% else %}
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-sm btn-info btn-vnc-open" disabled
+                                            data-image-id="{{ image.id }}">
+                                        <i class="fa fa-desktop"></i></button>
+                                    <button type="button" class="btn btn-sm btn-success dropdown-toggle"
+                                            id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                                            aria-expanded="false">操作
+                                    </button>
+                                    <div class="dropdown-menu text-center" aria-labelledby="dropdownMenuButton">
+                                        <a class="dropdown-item bg-primary"
+                                           href="{% url 'image:image-vm-create' image_id=image.id %}">创建虚拟机</a>
+                                        <button class="dropdown-item bg-warning btn-image-update" type="button"
+                                                data-image-id="{{ image.id }}">更新镜像
+                                        </button>
+                                        <a class="dropdown-item bg-danger btn-vm-delete"
+                                           href="{% url 'image:image-delete' id=image.id %}">删除镜像</a>
+                                    </div>
+                                </div>
+                            {% endif %}
+                        </td>
                     </tr>
                 {% endfor %}
                 </tbody>
@@ -95,25 +160,31 @@
                 {% if page_list %}
                     <div class="card-footer">
                         <nav aria-label="Page navigation">
-                            <ul class="pagination"  style="margin:0;">
+                            <ul class="pagination" style="margin:0;">
                                 {% if previous %}
-                                    <li class="page-item"><a class="page-link" href="?{{ previous }}" aria-label="Previous"><span
+                                    <li class="page-item"><a class="page-link" href="?{{ previous }}"
+                                                             aria-label="Previous"><span
                                             aria-hidden="true">&laquo;</span></a></li>
                                 {% else %}
-                                    <li class="page-item disable"><span class="page-link" aria-hidden="true">&laquo;</span></li>
+                                    <li class="page-item disable"><span class="page-link"
+                                                                        aria-hidden="true">&laquo;</span></li>
                                 {% endif %}
                                 {% for disp, query, active in page_list %}
                                     {% if active %}
-                                        <li class="page-item active"><a class="page-link" href="?{{ query }}">{{ disp }}</a></li>
+                                        <li class="page-item active"><a class="page-link"
+                                                                        href="?{{ query }}">{{ disp }}</a></li>
                                     {% else %}
-                                        <li class="page-item"><a class="page-link" href="?{{ query }}">{{ disp }}</a></li>
+                                        <li class="page-item"><a class="page-link" href="?{{ query }}">{{ disp }}</a>
+                                        </li>
                                     {% endif %}
                                 {% endfor %}
                                 {% if next %}
-                                    <li class="page-item"><a class="page-link" href="?{{ next }}" aria-label="Next"><span
+                                    <li class="page-item"><a class="page-link" href="?{{ next }}"
+                                                             aria-label="Next"><span
                                             aria-hidden="true">&raquo;</span></a></li>
                                 {% else %}
-                                    <li class="page-item disable"><span class="page-link" aria-hidden="true">&raquo;</span></li>
+                                    <li class="page-item disable"><span class="page-link"
+                                                                        aria-hidden="true">&raquo;</span></li>
                                 {% endif %}
                             </ul>
                         </nav>
@@ -125,5 +196,6 @@
 {% endblock %}
 
 {% block script %}
-
+    <script type="text/javascript" src="{% static 'evcloud/common.js' %}"></script>
+    <script type="text/javascript" src="{% static 'image/image_list.js' %}"></script>
 {% endblock %}
